-Added 6 new papal bulls for the Catholique papacy
-Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, France, Navarra, Bohemia, Worms, Byzantium, Bogomilist, Taifa
-Added an event for the Arumer Zwarte Hoop
-Buffed invading nations
-Fixed CTD caused by missing Epic Games store button
-Some more missions now utilise monuments if you own Leviathan
-The Prussian Confederacy will start with more provinces
-Estates will no longer demand the construction of a manufactory before tech 32
-The Golden Horde and Ilkhanate will now start as historical friends, however, they will become historical rivals later on
-Tribal land should no longer become uncolonized randomly
-Natives can now conquer land and vassalize in peace deals
-Natives will get a +200 % tech cost penalty
-Natives can now reform into monarchies properly
-Natives will now lose enough reform progress upon reforming preventing them to select further reforms Immediately afterwards
-Federations will no longer be able to centralize
-Improved the code of the decision for Byzantium to reform their government (thanks to HawkV)
-Reworked Byzantine 'Repair the Defenses' decision to only require sufficient number of forts in Anatolian border regions
-Optimised 'Centralize the Realm' decision to hopefully cause way less lag than it used to
-Fixed some overlapping interface
-Instances of Reform Progress growth modifier will now work correctly again
-Removed war canoes from the mod
-The AI will less often form Lombardy
-Added an event to end wars when a crusading nation is attacked by Catholics
-More countries will now participate in Great Crusades
-Changing state religions will no longer refresh missions
-Forming England as Normandy should no longer cause issues with national ideas or terra incognita
-Other minor localization/bug fixes

# v 2.2.4 #

-Small fixes for the following mission trees: Toulouse, Swabia
-Versailles is now located in the correct province