@@ -78,7 +78,7 @@ post_office = {
 	}
 }
 
-canal = {
+harbour = {
 	cost = 100
 	time = 12
 	build_trigger = {
