@@ -1854,7 +1854,7 @@ die_saxon_rebellion_mission = {
 	harsh_treatment_cost = -0.25
 }
 die_weaken_the_princes_mission = {
-	legitimate_subject_elector = 25
+	all_power_cost = -0.05
 }
 die_conquer_bavaria_mission = {
 	unjustified_demands = -0.25
