@@ -13,7 +13,7 @@ kiel_canal = {
 			owns_or_vassal_of = 1233
 			owns_or_vassal_of = 2319
 			is_subject = no			
-			adm_tech = 22
+			adm_tech = 60
 			treasury = 10000
 		}
 	}
@@ -92,7 +92,7 @@ suez_canal = {
 			owns_or_vassal_of = 5082
 			owns_or_vassal_of = 5052
 			is_subject = no
-			adm_tech = 22
+			adm_tech = 60
 			treasury = 20000
 		}
 	}
@@ -168,7 +168,7 @@ panama_canal = {
 		FROM = {
 			owns_or_vassal_of = 614
 			is_subject = no
-			adm_tech = 22
+			adm_tech = 60
 			treasury = 30000
 		}
 	}
