@@ -1028,7 +1028,7 @@ has_shipyard_building_trigger = {
 
 has_dock_building_trigger = {
 	OR = {
-		has_building = canal
+		has_building = harbour
 		has_building = dock
 		has_building = drydock
 	}
