@@ -77,7 +77,7 @@ technology = {
 	# Tech 7
 	year = 1129
 	
-	canal = yes
+	harbour = yes
 	trade_efficiency 		= 	0.02
 	trade_range				=	50
 
