@@ -8,6 +8,8 @@ country_decisions = {
 				AND = {
 					treasury = 20000
 					owns_or_vassal_of = 360
+					owns_or_vassal_of = 1233
+					owns_or_vassal_of = 2319
 				}
 			}
 			has_discovered = 360
@@ -61,6 +63,8 @@ country_decisions = {
 				AND = {
 					treasury = 40000
 					owns_or_vassal_of = 5075
+					owns_or_vassal_of = 5082
+					owns_or_vassal_of = 5052
 				}
 			}
 			has_discovered = 5075
