@@ -1202,13 +1202,13 @@ guiTypes = {
 		}	
 
 		checkboxType = {
-			name = "build_canal"
+			name = "build_harbour"
 			position = { x = 162 y = 272 }
 			quadTextureSprite = "GFX_courthouse_muslimgfx" #Placeholder, real sprite is decided by game (based on button name).
 		}
 		
 		instantTextBoxType={
-			name = "canal_cost"
+			name = "harbour_cost"
 			position = {x = 165 y = 303 }
 			font = "vic_18"
 			borderSize = {x = 0 y = 0}	
