@@ -3,7 +3,7 @@
  RELIGIOUS_CONFLICT_RULES_ON: "§YReligiöser Konflikt§!\n- Kreuzzüge können vom Kontrolleur der Kurie ausgerufen werden.\n- Katholische Herrscher können exkommuniziert werden.\n- Katholische Monarchien haben Ritterorden. \n- Reformationszentren können auftauchen.\n- Religion hat Einfluss auf Diplomatie."
  RELIGIOUS_CONFLICT_RULES_OFF: "Dieses Zeitalter hat keine besonderen religiösen Konflikte. Reformationszentren wurden aufgelöst, Kreuzzüge beendet, Ritterorden aufgelöst und der Papst kann nicht mehr exkommunizieren."
  estate_burghers_khmer_irrigation_effect_tooltip: "Jede im Besitz befindliche Provinz in §YMesopotamien§!, die §YGetreide§!, §YDatteln§!, §YGerste§!, §YRoggen§!, §YGemüse§! oder §YReis§! produziert, erhält:\nEntwicklungskosten (Lokal): §G-10 %§!"
- MONOPOLY_INCOME_LIVESTOCK_DESC: "aus der Viehbestands- und Schweineproduktion."
+ MONOPOLY_INCOME_LIVESTOCK_DESC: "aus der Vieh- und Schweineproduktion."
 #Nobles Estate
  estate_nobles_frontier_resettlement: "Iberische Grenzkolonisten"
  estate_nobles_frontier_resettlement_desc: "Während der ständigen Kriege zwischen Christen und Muslimen in Iberien wurde ein großer Landstrich praktisch zu einem entvölkerten Niemandsland. Angeführt von den Bemühungen der Adligen, mehr Land für sich zu beanspruchen, können wir jedoch wieder eine Präsenz an der Grenze aufbauen."
