@@ -6,7 +6,7 @@
  building_fort_14th: "Keep"
  building_road_network: "Road Network"
  building_post_office: "Guild"
- building_canal: "Port"
+ building_harbour: "Port"
  building_armory: "Armory"
  building_customs_house: "Apothecary"
  building_arsenal: "Hospice"
