@@ -6,7 +6,7 @@
  building_fort_14th: "Bergfried"
  building_road_network: "Straßennetz"
  building_post_office: "Gilde"
- building_canal: "Hafen"
+ building_harbour: "Hafen"
  building_armory: "Waffenkammer"
  building_customs_house: "Apotheke"
  building_arsenal: "Hospiz"
