@@ -75,7 +75,7 @@ VN_breton_minors_missions = {
 			2294 = {
 				owned_by = ROOT
 				development = 20
-				has_building = canal
+				has_building = harbour
 				OR = {
 					has_building = dock
 					has_building = drydock
