@@ -2309,12 +2309,12 @@ vn_eng_missions_slot_5_d = {
             4688 = {
                 owned_by = ROOT
                 development = 10
-                has_building = canal
+                has_building = harbour
 			}
             627 = {
                 owned_by = ROOT
                 development = 10
-                has_building = canal
+                has_building = harbour
             }
         }
         effect = {
@@ -2341,7 +2341,7 @@ vn_eng_missions_slot_5_d = {
                 has_port = yes
                 OR = {
                     development = 10
-                    has_building = canal
+                    has_building = caharbournal
                 }
                 value = 5
             }
