@@ -1104,7 +1104,7 @@ vn_fri_missions_slot_5_a = {
                     has_dock_building_trigger = yes
                     has_shipyard_building_trigger = yes
                 }
-                has_building = canal
+                has_building = harbour
             }
         }
         effect = {
