@@ -57,7 +57,7 @@ vn_por_missions_slot_1_a = {
 					}
 					AND = {
 						development = 15
-						has_building = canal
+						has_building = harbour
 					}
 				}
             }
@@ -74,7 +74,7 @@ vn_por_missions_slot_1_a = {
 						}
 						AND = {
 							development = 15
-							has_building = canal
+							has_building = harbour
 						}
 					}
                 }
@@ -93,7 +93,7 @@ vn_por_missions_slot_1_a = {
 						}
 						AND = {
 							development = 15
-							has_building = canal
+							has_building = harbour
 						}
 					}
 					NOT = { has_province_modifier = por_prosperous_ports_mission }
