@@ -668,7 +668,7 @@ vn_sic_missions_slot_3 = {
         trigger = {
             2711 = {
                 owned_by = ROOT
-                has_building = canal
+                has_building = harbour
                 has_building = armory
             }
         }
