@@ -47,7 +47,7 @@ vn_sie_missions_slot_1_a = {
 			1843 = {
 				owned_by = ROOT
 				is_core = ROOT
-				has_building = canal
+				has_building = harbour
 				has_fort_trigger = yes
 			}
 			treasury = 250
