@@ -9,6 +9,7 @@
 -Buffed invading nations
 -Fixed CTD caused by missing Epic Games store button
 -Some more missions now utilise monuments if you own Leviathan
+-Canals will no longer randomly spawn before when they are supposed to be built
 -The Prussian Confederacy will start with more provinces
 -Estates will no longer demand the construction of a manufactory before tech 32
 -The Golden Horde and Ilkhanate will now start as historical friends, however, they will become historical rivals later on
